# akanga_mirin

./: .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  verify_links.py
.claude/commands/: tutor.md
.github/: dependabot.yml
.github/workflows/: canary.yml  ci.yml
diagram/dsl/: akanga-architecture.ddsl  akanga-data-flow.ddsl  akanga-phase-progression.ddsl  akanga-system-components.ddsl
docs/: README.md  adversarial-analysis-v2.md  adversarial-analysis-v3.md  adversarial-analysis-v4.md  adversarial-analysis-v5.md  adversarial-analysis-v6.md  adversarial-analysis.md  analysis-and-enhancements.md  architecture-detailed.md  architecture-overview.md  deployment.md  facilitator-guide.md  future-ideas.md  implementation-plan.md  index.md  noteapp-alignment-audit.md  observability-module.md  plan-doc-and-test-strategy.md  plan-kg-theory-and-integration.md  plan-makefile-strategy.md  plan-noteapp-alignment.md  plan-security-and-deployment.md  roadmap.md  status-remediation.md  user-stories.md
docs/foundations/: asyncio-primer.md  design-patterns.md  direnv-basics.md  git-basics.md  graph-algorithms-beyond-bfs.md  graph-theory-basics.md  http-fundamentals.md  json-rpc-basics.md  makefile-basics.md  mkdocs-basics.md  python-dataclasses.md  python-threading.md  python-type-annotations.md  relation-vocabulary.md  sqlite-basics.md  terminal-and-tmux-basics.md  yaml-and-markdown-frontmatter.md
docs/learning/: phase-00-file-system-as-database.md  phase-01-data-modeling.md  phase-01a-data-modeling-edge-schema.md  phase-01b-workspace-and-sync.md  phase-02-storage-and-indexing.md  phase-03-graph-algorithms.md  phase-04-concurrency-and-events.md  phase-05-terminal-ui.md  phase-06-rest-api.md  phase-07-version-control.md  phase-08-ai-integration.md
examples/: phase_00_atomic_writer.py  phase_01_edge_parsing.py  phase_02_sqlite_wal.py  phase_03_bfs_ego_graph.py  phase_04_debounce_timer.py  phase_05_textual_basics.py  phase_06_fastapi_basics.py  phase_07_git_manager.py  phase_08_rag_context.py
my_implementations/: pyproject.toml
my_implementations/akanga/utils/: edges.py  node.py  parser.py
scripts/: _common.py  check_doc_contracts.py  skeleton_check.py  skeleton_merge.py  study.sh  sync_forward.py  sync_manifest.toml  validate_vault.py
skeletons/phase_00/: README.md
skeletons/phase_00/src/akanga_core/: models.py  parser.py  textutil.py
skeletons/phase_01/: README.md
skeletons/phase_01/src/akanga_core/: models.py  parser.py  sync_queue.py
skeletons/phase_02/: README.md
skeletons/phase_02/src/akanga_core/: db.py  indexer.py  links.py  models.py  parser.py  sync_queue.py
skeletons/phase_03/: README.md
skeletons/phase_03/src/akanga_core/: db.py  graph.py  models.py  sync_queue.py
skeletons/phase_04/: README.md
skeletons/phase_04/src/akanga_core/: __init__.py  db.py  eventbus.py  indexer.py  links.py  models.py  parser.py  sync_queue.py  sync_worker.py  watcher.py
skeletons/phase_05/: README.md
skeletons/phase_05/src/akanga_core/: __init__.py
skeletons/phase_05/src/akanga_tui/: __init__.py  app.py
skeletons/phase_06/: README.md
skeletons/phase_06/src/akanga_core/: __init__.py  indexer.py  server.py
skeletons/phase_07/: README.md
skeletons/phase_07/src/akanga_core/: __init__.py  gitmgr.py  indexer.py
skeletons/phase_08/: README.md
skeletons/phase_08/src/akanga_core/: __init__.py  app.py  parser.py  rag.py
skeletons/phase_08/src/akanga_mcp/: __init__.py  server.py
solutions/: README.md
solutions/phase_00/src/akanga_core/: __init__.py  models.py  parser.py
solutions/phase_01/src/akanga_core/: __init__.py  models.py  parser.py  sync_queue.py
solutions/phase_02/src/akanga_core/: __init__.py  db.py  indexer.py  parser.py  sync_queue.py  textutil.py
solutions/phase_03/src/akanga_core/: __init__.py  db.py  graph.py  parser.py
solutions/phase_04/src/akanga_core/: __init__.py  graph.py  (+2 more)
solutions/phase_08/: .test.env  run_api.py  run_tui.py
src/akanga_core/: models.py  parser.py
templates/: project-makefile
tests/: _helpers.py  conftest.py  test_scripts_markers.py
tests/phase_00/: conftest.py  test_parser.py  test_textutil.py
tests/phase_01/: conftest.py  test_schema.py  test_sync_queue.py
tests/phase_02/: conftest.py  test_db.py  test_indexer.py  test_links.py
tests/phase_03/: conftest.py  test_graph.py
tests/phase_04/: conftest.py  test_eventbus.py  test_sync_worker.py  test_watcher.py
tests/phase_05/: conftest.py  test_tui.py
tests/phase_06/: conftest.py  test_server.py
tests/phase_07/: conftest.py  test_git.py
tests/phase_08/: conftest.py  test_mcp.py  test_mcp_stdio.py  test_rag.py
(+45 files in other folders)
