[project]
name = "akanga-mirin"
version = "0.1.0"
description = "Akanga knowledge graph — structured learning path"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-frontmatter>=1.1.0",     # Phase 0+: YAML frontmatter parsing
    "textual>=8.2.5,<9.0.0",          # Phase 5: terminal UI
    "watchdog>=4.0.0",               # Phase 4: filesystem events
    "fastapi>=0.115.0",              # Phase 6: REST API
    "uvicorn[standard]>=0.32.0",     # Phase 6: ASGI server
    "gitpython>=3.1.40",             # Phase 7: git integration
    "fastmcp>=3.0.0,<4.0.0",          # Phase 8: MCP server
    "httpx>=0.27.0",                 # Phase 6 tests: async HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
