[project]
name = "akanga-mirin"
version = "0.1.0"
description = "Akanga knowledge graph — structured learning path"
readme = "README.md"
# 3.12 floor: nothing in the path needs 3.13-only features; the 3.13 pin failed
# behind corporate proxies on day 1 (v3 #10). CI still exercises 3.13 via
# .python-version — 3.12 is canary-verified, not locally verified.
requires-python = ">=3.12"
dependencies = [
    "python-frontmatter>=1.1.0",     # Phase 0+: YAML frontmatter parsing
    "textual>=8.2.5,<9.0.0",          # Phase 5: terminal UI
    "watchdog>=4.0.0",               # Phase 4: filesystem events
    "fastapi>=0.115.0",              # Phase 6: REST API
    "uvicorn[standard]>=0.32.0",     # Phase 6: ASGI server
    "gitpython>=3.1.40",             # Phase 7: git integration
    "fastmcp>=3.0.0,<4.0.0",          # Phase 8: MCP server
    "httpx>=0.27.0",                 # Phase 6 tests: async HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
graph = [
    # Phase 5 stretch goal: two-layer graph renderer (terminal graphics + canvas fallback)
    # Bounded so the weekly canary (not learner machines) absorbs major bumps (v3 #12).
    # textual-image replaced textual-kitty (v4 #12): textual-kitty 0.4.0 — the
    # latest ever published — exports no widget and cannot deliver the renderer.
    # The widget entry point is `from textual_image.widget import Image`.
    "textual-image>=0.6,<1",
    "textual-canvas>=1.1,<2",
    "networkx>=3,<4",
    "matplotlib>=3.8,<4",
    "pillow>=10,<13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: long-running integration tests (MCP stdio round-trip); enable with AKANGA_SLOW_TESTS=1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Skeleton stubs reference types ("GraphDatabase", "Node") in string annotations
# that the LEARNER will create — forward refs to not-yet-written code are the point.
"skeletons/**" = ["F821"]
